recursion.cons.butnlast.ButNlast.scala.error
Erreur de compilation :
ButNlast:31: error: not found: value length_list
  length_list = length(l)
  ^ButNlast:32: error: not found: value length_list
  return nfirst(l, length_list - n)
                   ^